Fix tags styles in forms
These styles were broken in commit 2614de79c, since there we only
considered scenarios where the `tags` element is a list. In these forms, however, the `tags` element is a regular <div> tag.

--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -1,6 +1,3 @@
-ul {
-
-  &.tags {
-    @extend %tags;
-  }
+.tags {
+  @extend %tags;
 }
